<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">SEND POST</string>
    <string name="facebook_app_id" translatable="false">726469888744829</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb726469888744829</string>
    <string name="facebook_client_token" translatable="false">b8496f622bb6c1d154b72085dc201247</string>
    <string name="google_web_client_id" translatable="false">98417667739-acikca3bhbudh3vqm7bd38lrvdl4rmub.apps.googleusercontent.com</string>
    <string name="admob_app_id" translatable="false">ca-app-pub-9919882958806070~2680179249</string>
    <string name="refer_earn"><![CDATA[Refer & Earn]]></string>
    <string name="share_link_amp_refer_user"><![CDATA[Share Link & Refer User]]></string>
    <string name="install_enter_your_refer_code"><![CDATA[Install & Enter your refer code]]></string>
    <string name="copied">Copied</string>
    <string name="now_reward_on_your_wallet">Now Reward on your wallet</string>
    <string name="send_invitation">Send Invitation</string>
    <string name="invite">Invite</string>
    <string name="invited_users">Invited Users</string>
    <string name="no_user_found">No user found</string>
    <string name="add_text">Add text</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="there_is_no_data_so">There is no data</string>
    <string name="no_item_found">No item found !</string>
    <string name="login_in">Login</string>
    <string name="continue_with_google">Continue with google</string>
    <string name="continue_with_facebook">Continue with facebook</string>
    <string name="login_cancel">Login cancel</string>
    <string name="login_error">Login error</string>
    <string name="authentication_failed">Authentication faild</string>
    <string name="tap_to_view_more_content">Tap to view more posters</string>
    <string name="newest">MOST SEND POST</string>
    <string name="edit_profile">Edit Personal Profile</string>
    <string name="profile_persion">Personal Profile</string>
    <string name="username">Personal Name</string>
    <string name="referral">Referral ID</string>
    <string name="email">Personal Email</string>
    <string name="phone">Phone Number</string>
    <string name="company">Company</string>
    <string name="facebook_page">FB Page Name</string>
    <string name="insta_username">Insta Username</string>
    <string name="cancel_">Cancel</string>
    <string name="permission">Permission</string>
    <string name="permission_alert">Permission alert !</string>
    <string name="settings">Settings</string>
    <string name="we_need_storage_and_camera_permission_for_upload_profile_pic">We need external storage and camera permission for upload verification picture.</string>
    <string name="take_photo">Take Photo</string>
    <string name="choose_from_gallery">From Gallery</string>
    <string name="add_photo_">Add Photo</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_number">Enter Mobile Number</string>
    <string name="enter_email">Enter email</string>
    <string name="whatsapp_number">Whatsapp Number</string>
    <string name="search_">Search</string>
    <string name="discover_more">Discover More</string>
    <string name="festival_category">Festival Category</string>
    <string name="bussiness_category">Business Category</string>
    <string name="search_your_query">Search your query</string>
    <string name="my_post">Saved Post</string>
    <string name="share_us">Share Us</string>
    <string name="rate_us">Rate us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_service"><![CDATA[Terms & Service]]></string>
    <string name="log_out">Log Out</string>
    <string name="language">Language</string>
    <string name="save">Save</string>
    <string name="Cancel">Cancel</string>
    <string name="hindi">Hindi</string>
    <string name="label_brush">Draw</string>
    <string name="label_shape">Shape</string>
    <string name="label_oval">Oval</string>
    <string name="label_rectangle">Rectangle</string>
    <string name="label_line">Line</string>
    <string name="label_emoji">Emoji</string>
    <string name="label_sticker">Stickers</string>
    <string name="label_eraser">Eraser</string>
    <string name="label_eraser_mode">Eraser Mode</string>
    <string name="label_text">Text</string>
    <string name="label_filter">Filter</string>
    <string name="label_adjust">Adjust</string>
    <string name="msg_save_image">Are you want to exit without saving image ?</string>
    <string name="app_intent_name">PhotoEditor</string>
    <string name="msg_save_image_to_share">Please save image to share</string>
    <string name="msg_share_image">Share Image</string>
    <string name="label_frame">Frame</string>
    <string name="label_photo_mode">Add Photo</string>
    <string name="next">Next</string>
    <string name="magic">Magic</string>
    <string name="zoom_in_out">Zoom in Out</string>
    <string name="remove_background">Remove BG</string>
    <string name="manual">Manual</string>
    <string name="label_draw">Draw</string>
    <string name="saved">Saved</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="more">More</string>
    <string name="facebook">Facebook</string>
    <string name="made_in_india_with_love">Made in india with ❤</string>
    <string name="your_photo_are_ready_to_share">Your photo is ready to share.</string>
    <string name="premium">Premium</string>
    <string name="one_month">1 Month</string>
    <string name="unlimited_posts">Unlimited Posts</string>
    <string name="premium_posts">Premium Posts</string>
    <string name="no_ads">No Ads</string>
    <string name="high_qwality_post">High-quality posts</string>
    <string name="unlimited_stickers">Unlimited Stickers</string>
    <string name="three_month">3 Month</string>
    <string name="one_year">1 Year</string>
    <string name="subscription_activated">Premium Activated</string>
    <string name="access_to_all_posts_and_premium_posts_with_no_ads_n_and_save_posts_with_high_quality">Access to all posts and Premium Posts with no ads and save posts with high quality.</string>
    <string name="account_blocked">Account Blocked</string>
    <string name="hello">Hello !</string>
    <string name="you_are_welcome">Welcome to SendPost</string>
    <string name="your_all_saved_post">Your all saved post.</string>
    <string name="please_share_your_experience">Please share your experience.</string>
    <string name="read_our_privacy_policy">Read our privacy policy.</string>
    <string name="please_accept_our_terms">Please accept our terms.</string>
    <string name="payment">payment</string>
    <string name="create"><![CDATA[Create More & Greetings]]></string>
    <string name="custome">Custome</string>
    <string name="greeting_poster">Greeting Poster</string>
    <string name="personal_details">Personal Details</string>
    <string name="bussiness_details">Business Details</string>
    <string name="social_details">Social Details</string>
    <string name="bussiness_name">Business Name</string>
    <string name="company_name">Company Name</string>
    <string name="address">Address</string>
    <string name="address_personal">Personal City, State</string>
    <string name="website">Personal Website (If No, Write E-mail)</string>
    <string name="select_image">Select Image</string>
    <string name="add_greeting_photo">Add Greeting Photo</string>
    <string name="change_name">Change Name</string>
    <string name="change_bussiness">Change Business</string>
    <string name="change">Change</string>
    <string name="submit">Yes</string>
    <string name="submitx">SUBMIT</string>
    <string name="back">back</string>
    <string name="please_fill_field">Please fill input Field</string>
    <string name="app_update">App Update !</string>
    <string name="please_update_app">Please update app for new features.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="currency">₹</string>
    <string name="flexible">Flexible</string>
    <string name="plans">Plans</string>
    <string name="months">Months</string>
    <string name="payment_cencelled">Payment Cancelled</string>
    <string name="use_all_premium">Use All Premium Stickers</string>
    <string name="use_all_premium_frame">Use All Premium Frames</string>
    <string name="add_bussiness">Edit Business Profile</string>
    <string name="point">Point Wallet</string>
    <string name="pin">Pin Wallet</string>
    <string name="bussiness_logo">Business Logo</string>
    <string name="bussiness_number">Business Number</string>
    <string name="Youtube_channel_name">Youtube Channel Name</string>
    <string name="instagrame_username">Instagram Username</string>
    <string name="enter_bussiness_name">Please enter business name</string>
    <string name="enter_details">Please enter details</string>
    <string name="edit_bussiness">Edit Business</string>
    <string name="my_bussiness">My Business</string>
    <string name="add_new">Add New</string>
    <string name="your_all_added_bussiness">Your all added business</string>
    <string name="please_select_bussiness_logo">Please select business logo</string>
    <string name="skip">Skip</string>
    <string name="select_yourlanguage">Select Your Language</string>
    <string name="make_brand">POSTER (45000+)</string>
    <string name="best_and_easy_way_to_make_your_business_posters_like_a_brand">Simple and easy way to daily connect your relatives and business friends and leave a good impression on their mind..</string>
    <string name="best_way_to_wish_your_customers_and_clients_on_behalf_of_your_business_by_making_a_festival_poster">Motivation is important in life. When you get it, you use it to drive yourself to a better place.</string>
    <string name="login_in_to_continue">Log in to continue..</string>
    <string name="bussiness_email">Business Email</string>
    <string name="enter_bussiness_email">Please enter business email</string>
    <string name="enter_bussiness_number">Please enter number</string>
    <string name="demo_number" translatable="false"></string>
    <string name="demo_name" translatable="false"></string>
    <string name="demo_email" translatable="false"></string>
    <string name="demo_insta" translatable="false"></string>
    <string name="demo_address" translatable="false"></string>
    <string name="upcoming_festivals">Upcoming Festivals</string>
    <string name="upcoming_h_days">Upcoming Days</string>
    <string name="upcoming_days">Week Days</string>
    <string name="upcoming_relation">Relation</string>
    <string name="amazing_days">AMAZING</string>
    <string name="Daily_Routine1">Daily Routine 1</string>
    <string name="Daily_Routine2">Daily Routine 2</string>
    <string name="Daily_Routine3">Daily Routine 3</string>
    <string name="Motivational">Motivational</string>
    <string name="bestwishes">Best Whishes</string>
    <string name="msgtosoc">Msg. to Society</string>
    <string name="goddeva">God (Deva)</string>
    <string name="goddevi">God (Devi)</string>
    <string name="leader_thought"><![CDATA[Leader\'s thought]]></string>
    <string name="numrology">NUMEROLOGY</string>
    <string name="rashi">Rashi</string>
    <string name="occasion">Occasion</string>
    <string name="choose_a_plan_that_best_for_you">Choose a plan that best for you</string>
    <string name="contact_number">Contact Number</string>
    <string name="message">Message</string>
    <string name="contact">Connect us</string>
    <string name="choose_plan">Choose plan</string>
    <string name="promo_code">Promo Code</string>
    <string name="code">CODE</string>
    <string name="cheak">Chek</string>
    <string name="buy">Buy</string>
    <string name="applid">Applied</string>
</resources>