<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:padding="@dimen/_15sdp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/top_rounded_bg"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/textColor"
        android:text="Select Payment Type"
        android:textStyle="bold"
        android:textSize="@dimen/_18sdp"/>
    <RadioGroup
        android:layout_marginTop="@dimen/_15sdp"
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RadioButton
            android:visibility="gone"
            android:paddingHorizontal="@dimen/_8sdp"
            android:background="@drawable/rounded_bg"
            android:backgroundTint="#0F000000"
            android:drawableLeft="@drawable/googleg_standard_color_18"
            android:drawablePadding="@dimen/_15sdp"
            android:id="@+id/googlepay_rb"
            android:textColor="@color/textColor"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:text="Google Play Purchase"/>

        <RadioButton
            android:visibility="gone"
            android:paddingHorizontal="@dimen/_8sdp"
            android:background="@drawable/rounded_bg"
            android:backgroundTint="#0F000000"
            android:id="@+id/razorpay_rb"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:drawableLeft="@drawable/ic_razorpay"
            android:drawablePadding="@dimen/_8sdp"
            android:textColor="@color/textColor"
            android:text="RazorPay" />
    </RadioGroup>

    <TextView
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/textColor"
        android:text="@string/promo_code"
        android:textStyle="bold"
        android:textSize="@dimen/_18sdp"/>

    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/code_et"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_dash_bg"
            android:paddingVertical="@dimen/_10sdp"
            android:paddingHorizontal="@dimen/_8sdp"
            android:layout_marginVertical="@dimen/_5sdp"
            android:textColor="@color/textColor"
            android:hint="@string/code"
            android:textColorHint="@color/hintColor"/>
        <TextView
            android:id="@+id/cheak_btn"
            android:layout_marginLeft="@dimen/_10sdp"
            android:paddingHorizontal="@dimen/_18sdp"
            android:layout_marginRight="@dimen/_4sdp"
            android:background="@drawable/rounded_bg"
            android:paddingVertical="@dimen/_13sdp"
            android:gravity="center"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cheak"/>
    </LinearLayout>

    <TextView
        android:visibility="gone"
        android:id="@+id/success_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/green_color_picker"
        android:text="@string/applid"
        android:textSize="@dimen/_15sdp"/>


    <LinearLayout
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/cencel_btn"
            android:layout_marginRight="@dimen/_4sdp"
            android:background="@drawable/login_btn"
            android:paddingVertical="@dimen/_15sdp"
            android:gravity="center"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel_"
            android:backgroundTint="#E8E8E8"/>
        <TextView
            android:id="@+id/buy_btn"
            android:layout_marginLeft="@dimen/_4sdp"
            android:background="@drawable/login_btn"
            android:paddingVertical="@dimen/_15sdp"
            android:gravity="center"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/buy"/>

    </LinearLayout>
</LinearLayout>