<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <import type="android.view.View"/>
        <variable
            name="subscription"
            type="com.sendpost.dreamsoft.model.SubscriptionModel" />
    </data>
    <androidx.cardview.widget.CardView
        android:layout_width="@dimen/_280sdp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/_10sdp"
        android:elevation="@dimen/_10sdp">

        <LinearLayout
            android:id="@+id/main_lay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/subscription_bg"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/_10sdp">

                <androidx.cardview.widget.CardView
                    android:layout_width="@dimen/_70sdp"
                    android:layout_height="@dimen/_70sdp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="@dimen/_8sdp">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:imageURL="@{subscription.image}"/>
                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingHorizontal="@dimen/_10sdp">

                    <TextView
                        android:id="@+id/name_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{subscription.name}"
                        android:textColor="@color/white"
                        android:textSize="20dp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="bottom"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/currency"
                            android:textColor="#B7FFFFFF"
                            android:textSize="20dp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/price_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="@dimen/_5sdp"
                            android:text="@{subscription.price}"
                            android:textColor="@color/white"
                            android:textSize="25dp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="/"
                            android:textColor="#B7FFFFFF"
                            android:textSize="20dp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/month_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="3dp"
                            android:text="@{subscription.value}"
                            android:textColor="#B7FFFFFF"
                            android:textSize="20dp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="3dp"
                            android:text="@{subscription.type}"
                            android:textColor="#B7FFFFFF"
                            android:textSize="15sp"
                            android:textStyle="bold" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/_10sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:drawableLeft="@drawable/ic_right_hand"
                    android:drawablePadding="@dimen/_5sdp"
                    android:drawableTint="@color/white"
                    android:text="@string/unlimited_posts"
                    android:textColor="@color/white"
                    android:textSize="15dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginTop="10dp"
                    android:drawableLeft="@drawable/ic_right_hand"
                    android:drawablePadding="@dimen/_5sdp"
                    android:drawableTint="@color/white"
                    android:text="@string/premium_posts"
                    android:textColor="@color/white"
                    android:textSize="15dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginTop="10dp"
                    android:drawableLeft="@drawable/ic_right_hand"
                    android:drawablePadding="@dimen/_5sdp"
                    android:drawableTint="@color/white"
                    android:text="@string/no_ads"
                    android:textColor="@color/white"
                    android:textSize="15dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginTop="10dp"
                    android:drawableLeft="@drawable/ic_right_hand"
                    android:drawablePadding="@dimen/_5sdp"
                    android:drawableTint="@color/white"
                    android:text="@string/use_all_premium"
                    android:textColor="@color/white"
                    android:textSize="15dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginTop="10dp"
                    android:drawableLeft="@drawable/ic_right_hand"
                    android:drawablePadding="@dimen/_5sdp"
                    android:drawableTint="@color/white"
                    android:text="@string/use_all_premium_frame"
                    android:textColor="@color/white"
                    android:textSize="15dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginTop="10dp"
                    android:drawableLeft="@drawable/ic_right_hand"
                    android:drawablePadding="@dimen/_5sdp"
                    android:drawableTint="@color/white"
                    android:text="@string/high_qwality_post"
                    android:textColor="@color/white"
                    android:textSize="15dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginTop="10dp"
                    android:drawableLeft="@drawable/ic_right_hand"
                    android:drawablePadding="@dimen/_5sdp"
                    android:drawableTint="@color/white"
                    android:text="@string/unlimited_stickers"
                    android:textColor="@color/white"
                    android:textSize="15dp" />

                <RelativeLayout
                    android:id="@+id/one_month_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/full_rounded_bg">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:drawableRight="@drawable/ic_right"
                        android:drawablePadding="@dimen/_10sdp"
                        android:paddingVertical="@dimen/_10sdp"
                        android:text="@string/choose_plan"
                        android:textColor="@color/white"
                        android:textSize="20dp"
                        android:textStyle="bold" />
                </RelativeLayout>

            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</layout>
